add category doc in swagger
