# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Api\EventController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\CategoryController;
 
 Route::get('/user', function (Request $request) {
     return $request->user();
@@ -10,3 +11,4 @@ Route::get('/user', function (Request $request) {
 
 // Event routes
 Route::apiResource('events', EventController::class);
+Route::apiResource('categories', CategoryController::class);
